# josafa

./: .dockerignore  .env.dev.example  .env.prod.example  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
docker/uv/: Dockerfile
src/josafa/: config.py  database.py  main.py
src/josafa/cogs/: __init__.py  events_cog.py  miscellaneous_cog.py  music_cog.py  voice_channel_cog.py
src/josafa/models/: guild_config.py
src/josafa/repositories/: guild_config_repository.py
src/josafa/services/: events_service.py  miscellaneous_service.py  music_service.py  voice_channel_service.py
src/josafa/tasks/: music_task.py
src/josafa/utils/: youtube_utils.py
